Add index.html file and basic layout

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,90 @@
   </head>
   <body>
     <header>
-      <h1>Is working 🪐</h1>
+      <nav class="nav">
+        <img class="logo" src="" alt="Logo">
+        <ul class="nav_list">
+          <li class="nav_list_li">Spaceships</li>
+          <li class="nav_list_li">Planets</li>
+          <li class="nav_list_li">Races</li>
+        </ul>
+      </nav>
     </header>
+    <main>
+      <div class="cards_container">
+        <div class="card">
+          <img src="" alt="">
+          <div class="card_title">
+            <h2></h2>
+            <div class="like_container">
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <button class="comment_btn btn"></button>
+            <button class="reservations_btn btn"></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="">
+          <div class="card_title">
+            <h2></h2>
+            <div class="like_container">
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <button class="comment_btn btn"></button>
+            <button class="reservations_btn btn"></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="">
+          <div class="card_title">
+            <h2></h2>
+            <div class="like_container">
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <button class="comment_btn btn"></button>
+            <button class="reservations_btn btn"></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="">
+          <div class="card_title">
+            <h2></h2>
+            <div class="like_container">
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <button class="comment_btn btn"></button>
+            <button class="reservations_btn btn"></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="">
+          <div class="card_title">
+            <h2></h2>
+            <div class="like_container">
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <button class="comment_btn btn"></button>
+            <button class="reservations_btn btn"></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="" alt="">
+          <div class="card_title">
+            <h2></h2>
+            <div class="like_container">
+              <img src="" alt="">
+              <p></p>
+            </div>
+            <button class="comment_btn btn"></button>
+            <button class="reservations_btn btn"></button>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
