Finish basic html layout

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test</title>
+    <title>Awesome Cats</title>
   </head>
   <body>
     <header>
       <nav class="nav">
-        <img class="logo" src="" alt="Logo">
+        <img class="logo" src="" alt="Logo" />
         <ul class="nav_list">
           <li class="nav_list_li">Spaceships</li>
           <li class="nav_list_li">Planets</li>
@@ -18,80 +18,24 @@
       </nav>
     </header>
     <main>
+
       <div class="cards_container">
+
         <div class="card">
-          <img src="" alt="">
-          <div class="card_title">
-            <h2></h2>
+          <img class="card_image" alt="dog image" />
+          <div class="card_body">
+            <h2 class="card_title">Space 1</h2>
             <div class="like_container">
-              <img src="" alt="">
-              <p></p>
+              <img class="like_icon" src="" alt="" />
+              <p class="like_text">5 Likes</p>
             </div>
-            <button class="comment_btn btn"></button>
-            <button class="reservations_btn btn"></button>
           </div>
+          <button class="comment btn">Comments</button>
+          <button class="reservation btn">Reservations</button>
         </div>
-        <div class="card">
-          <img src="" alt="">
-          <div class="card_title">
-            <h2></h2>
-            <div class="like_container">
-              <img src="" alt="">
-              <p></p>
-            </div>
-            <button class="comment_btn btn"></button>
-            <button class="reservations_btn btn"></button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="">
-          <div class="card_title">
-            <h2></h2>
-            <div class="like_container">
-              <img src="" alt="">
-              <p></p>
-            </div>
-            <button class="comment_btn btn"></button>
-            <button class="reservations_btn btn"></button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="">
-          <div class="card_title">
-            <h2></h2>
-            <div class="like_container">
-              <img src="" alt="">
-              <p></p>
-            </div>
-            <button class="comment_btn btn"></button>
-            <button class="reservations_btn btn"></button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="">
-          <div class="card_title">
-            <h2></h2>
-            <div class="like_container">
-              <img src="" alt="">
-              <p></p>
-            </div>
-            <button class="comment_btn btn"></button>
-            <button class="reservations_btn btn"></button>
-          </div>
-        </div>
-        <div class="card">
-          <img src="" alt="">
-          <div class="card_title">
-            <h2></h2>
-            <div class="like_container">
-              <img src="" alt="">
-              <p></p>
-            </div>
-            <button class="comment_btn btn"></button>
-            <button class="reservations_btn btn"></button>
-          </div>
-        </div>
+
       </div>
+
     </main>
   </body>
 </html>
