--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>Awesome Cats</title>
   </head>
   <body>
@@ -11,31 +12,17 @@
       <nav class="nav">
         <img class="logo" src="" alt="Logo" />
         <ul class="nav_list">
-          <li class="nav_list_li">Spaceships</li>
-          <li class="nav_list_li">Planets</li>
-          <li class="nav_list_li">Races</li>
+          <li class="nav_list_li">Awesome Dogs</li>
+          <li class="nav_list_li">About us</li>
+          <li class="nav_list_li">Donate</li>
         </ul>
       </nav>
     </header>
     <main>
 
-      <div class="cards_container">
-
-        <div class="card">
-          <img class="card_image" alt="dog image" />
-          <div class="card_body">
-            <h2 class="card_title">Space 1</h2>
-            <div class="like_container">
-              <img class="like_icon" src="" alt="" />
-              <p class="like_text">5 Likes</p>
-            </div>
-          </div>
-          <button class="comment btn">Comments</button>
-          <button class="reservation btn">Reservations</button>
-        </div>
-
-      </div>
+      <div class="cards_container"></div>
 
     </main>
+    
   </body>
 </html>
