--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0"
+    />
     <title>Awesome Dogs</title>
   </head>
   <body>
@@ -19,13 +22,11 @@
       </nav>
     </header>
     <main>
-
       <div class="cards_container"></div>
-
     </main>
-    <div class="modal">
+    <div class="modal invisible">
       <div class="modal_container">
-        
+        <span class="close material-symbols-outlined"> close </span>
       </div>
     </div>
   </body>
