Add modal functionality

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav class="nav">
-        <img class="logo" alt="Logo" />
+        <img class="logo" src="" alt="Logo" />
         <ul class="nav_list">
           <li class="nav_list_li">Awesome Dogs</li>
           <li class="nav_list_li">About us</li>
