Add styles to logo

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav class="nav">
-        <img class="logo" alt="Logo" />
+        <p class="logo">🐺AD</p>
         <ul class="nav_list">
           <li class="nav_list_li">Awesome Dogs</li>
           <li class="nav_list_li">About us</li>
@@ -27,6 +27,12 @@
     <div class="modal invisible">
       <div class="modal_container">
         <span class="close material-symbols-outlined"> close </span>
+        <div class="modal_body_container">
+          <img src="" alt="">
+          <h2>Space</h2>
+
+
+        </div>
       </div>
     </div>
   </body>
