Add footer and styles

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,10 @@
   <body>
     <header>
       <nav class="nav">
-        <p class="logo">🐺AD</p>
+        <p class="logo">🐺</p>
+        <span class="burger material-symbols-outlined"> menu </span>
         <ul class="nav_list">
+          <span class="close_m material-symbols-outlined"> close </span>
           <li class="nav_list_li">Awesome Dogs</li>
           <li class="nav_list_li">About us</li>
           <li class="nav_list_li">Donate</li>
@@ -24,14 +26,13 @@
     <main>
       <div class="cards_container"></div>
     </main>
+    <footer>“Dogs do speak, but only to those who know how to listen.”– Orhan Pamuk</footer>
     <div class="modal invisible">
       <div class="modal_container">
         <span class="close material-symbols-outlined"> close </span>
         <div class="modal_body_container">
-          <img src="" alt="">
+          <img src="" alt="" />
           <h2>Space</h2>
-
-
         </div>
       </div>
     </div>
