Modal design and styles

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,25 @@
       <div class="modal_container">
         <span class="close material-symbols-outlined"> close </span>
         <div class="modal_body_container">
-          <img src="" alt="" />
-          <h2>Space</h2>
+          <img class="modal_img" src="https://cdn2.thedogapi.com/images/BkrJjgcV7_1280.jpg" alt="Dog photo" />
+          <h2 class="dog_breed">Yorkshire</h2>
+          <ul class="perks_list">
+            <li class="perks_list_li">Fuel: titanium</li>
+            <li class="perks_list_li">Length: 100.000</li>
+            <li class="perks_list_li">Weight: 400</li>
+            <li class="perks_list_li">Power: 10kw</li>
+          </ul>
+          <div class="comments">
+            <h3>Comments</h3>
+            <p>()</p>
+          </div>
+          <ul class="comments_list"></ul>
+          <h3>Add a comment</h3>
+          <form class="form" action="">
+            <input placeholder="Your name" type="text">
+            <textarea placeholder="Your insights"></textarea>
+            <button class="comment btn">Comment</button>
+          </form>
         </div>
       </div>
     </div>
